--- a/00-html-css/styles.css
+++ b/00-html-css/styles.css
@@ -208,7 +208,8 @@ form input[type="search"]::placeholder {
   color: #64748b;
 }
 
-form button[type="submit"] {
+form button[type="submit"], 
+article button {
   padding: 0.6rem 1rem;
   border-radius: 0.6rem;
   background-color: #0d6efd; /* blue button to match screenshot */
@@ -378,4 +379,67 @@ header {
             border-radius: 100%;
         }
     }
+}
+
+.desplegables {
+    select {
+        padding: 0.5rem 1rem;
+        border-radius: 0.5rem;
+        background-color: #334155;
+        color: var(--text-primary);
+        display: inline-block;
+        font-size: 0.75rem;
+        font-weight: 700;
+        text-decoration: none;
+        margin: 5px;
+    }
+}
+
+section#resultados {
+  max-width: 900px;   /* ancho máximo */
+  margin: 2rem auto;  /* auto para centrar horizontalmente */
+  padding: 1rem;      /* un poco de aire */
+}
+
+section#resultados article {
+  background-color: var(--background);
+  margin-bottom: 1.5rem;
+  padding: 1.5rem;
+  border: 1px solid var(--border);
+  border-radius: 0.5rem;
+}
+
+
+.paginacion {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+}
+
+.paginacion ul {
+  list-style: none;
+  display: flex;
+  gap: 0.5rem;
+  padding: 0;
+  margin: 0;
+}
+
+.paginacion li a {
+  display: block;
+  padding: 0.5rem 0.9rem;
+  border-radius: 6px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 0.9rem;
+  transition: background 0.3s;
+}
+
+.paginacion li a:hover {
+  background: #374151; /* gris un poco más claro */
+}
+
+.paginacion li a.active {
+  background: #2563eb; /* azul */
+  color: #fff;
+  font-weight: bold;
 }
