--- a/01-javascript/styles.css
+++ b/01-javascript/styles.css
@@ -146,7 +146,7 @@ header div a {
 
 /* Hero */
 main > section:nth-child(1) {
-  height: 500px;
+  height: auto;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -427,33 +427,41 @@ section#resultados article {
 .paginacion {
   display: flex;
   justify-content: center;
-  margin: 2rem 0;
-}
-
-.paginacion ul {
-  list-style: none;
-  display: flex;
   gap: 0.5rem;
-  padding: 0;
-  margin: 0;
+  margin-block: 2rem;
+
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    text-decoration: none;
+    color: var(--text-muted);
+    border-radius: 0.375rem;
+    transition: all .3s;
+
+    &:hover, &:focus {
+      background-color: #fff;
+    }
+
+    &:active {
+      transform: scale(0.90);
+    }
+
+    &.is-active {
+      background-color: var(--primary-light);
+      color: white;
+      pointer-events: none;
+    }
+  }
 }
 
-.paginacion li a {
-  display: block;
-  padding: 0.5rem 0.9rem;
-  border-radius: 6px;
-  color: #fff;
-  text-decoration: none;
-  font-size: 0.9rem;
-  transition: background 0.3s;
-}
+.button-apply-job {
+  background: #09f;
 
-.paginacion li a:hover {
-  background: #374151; /* gris un poco más claro */
-}
-
-.paginacion li a.active {
-  background: #2563eb; /* azul */
-  color: #fff;
-  font-weight: bold;
+  &.is-applied {
+    background: #4caf50;
+    pointer-events: none;
+  }
 }
