--- a/01-javascript/styles.css
+++ b/01-javascript/styles.css
@@ -396,17 +396,31 @@ header {
 }
 
 .desplegables {
-    select {
-        padding: 0.5rem 1rem;
-        border-radius: 0.5rem;
-        background-color: #334155;
-        color: var(--text-primary);
-        display: inline-block;
-        font-size: 0.75rem;
-        font-weight: 700;
-        text-decoration: none;
-        margin: 5px;
+  select {
+    padding: 0.625rem 1.25rem;
+    background-color: #242d3a;
+    border: 0;
+    border-radius: 0.5rem;
+    font-size: 0.875rem;
+    color: #ddd;
+    cursor: pointer;
+    transition: all 0.2s;
+    appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center;
+    padding-right: 2.5rem;
+
+    &:hover {
+      background-color: var(--primary-hover);
+      color: white;
     }
+
+    &:focus {
+      outline: 2px solid #1173d4;
+      outline-offset: 2px;
+    }
+  }
 }
 
 section#resultados {
@@ -423,6 +437,9 @@ section#resultados article {
   border-radius: 0.5rem;
 }
 
+.is-hidden{
+  display: none !important;
+}
 
 .paginacion {
   display: flex;
